objects/V_ODATA_GET_BP_PRODUCTS__x.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_POID__c</fullName>
        <description>ACCOUNT_POID</description>
        <externalDeveloperName>ACCOUNT_POID</externalDeveloperName>
        <label>ACCOUNT_POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDOM__c</fullName>
        <description>BDOM</description>
        <externalDeveloperName>BDOM</externalDeveloperName>
        <label>BDOM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BILLINFO_POID__c</fullName>
        <description>BILLINFO_POID</description>
        <externalDeveloperName>BILLINFO_POID</externalDeveloperName>
        <label>BILLINFO_POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BILLING_PROFILE_ID__c</fullName>
        <description>BILLING_PROFILE_ID</description>
        <externalDeveloperName>BILLING_PROFILE_ID</externalDeveloperName>
        <label>BILLING_PROFILE_ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_ACCOUNT_NO__c</fullName>
        <description>CUSTOMER_ACCOUNT_NO</description>
        <externalDeveloperName>CUSTOMER_ACCOUNT_NO</externalDeveloperName>
        <label>CUSTOMER_ACCOUNT_NO</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_CREATED_DATE__c</fullName>
        <description>ITEM_CREATED_DATE</description>
        <externalDeveloperName>ITEM_CREATED_DATE</externalDeveloperName>
        <label>ITEM_CREATED_DATE</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ITEM_CREATED_T__c</fullName>
        <description>ITEM_CREATED_T</description>
        <externalDeveloperName>ITEM_CREATED_T</externalDeveloperName>
        <label>ITEM_CREATED_T</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ITEM_POID_TYPE__c</fullName>
        <description>ITEM_POID_TYPE</description>
        <externalDeveloperName>ITEM_POID_TYPE</externalDeveloperName>
        <label>ITEM_POID_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ITEM_POID__c</fullName>
        <description>ITEM_POID</description>
        <externalDeveloperName>ITEM_POID</externalDeveloperName>
        <label>ITEM_POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LICENSE_NUMBER__c</fullName>
        <description>LICENSE_NUMBER</description>
        <externalDeveloperName>LICENSE_NUMBER</externalDeveloperName>
        <label>LICENSE_NUMBER</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEXT_BILL_DATE__c</fullName>
        <description>NEXT_BILL_DATE</description>
        <externalDeveloperName>NEXT_BILL_DATE</externalDeveloperName>
        <label>NEXT_BILL_DATE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_NUMBER__c</fullName>
        <description>ORDER_NUMBER</description>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>ORDER_NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PENDING_AMOUNT__c</fullName>
        <description>PENDING_AMOUNT</description>
        <externalDeveloperName>PENDING_AMOUNT</externalDeveloperName>
        <label>PENDING_AMOUNT</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_CODE__c</fullName>
        <description>PRODUCT_CODE</description>
        <externalDeveloperName>PRODUCT_CODE</externalDeveloperName>
        <label>PRODUCT_CODE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_NAME__c</fullName>
        <description>PRODUCT_NAME</description>
        <externalDeveloperName>PRODUCT_NAME</externalDeveloperName>
        <label>PRODUCT_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PURCHASED_PROD_POID__c</fullName>
        <description>PURCHASED_PROD_POID</description>
        <externalDeveloperName>PURCHASED_PROD_POID</externalDeveloperName>
        <label>PURCHASED_PROD_POID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_ASSET_STATUS__c</fullName>
        <description>SFDC_ASSET_STATUS</description>
        <externalDeveloperName>SFDC_ASSET_STATUS</externalDeveloperName>
        <label>SFDC_ASSET_STATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIEBEL_ASSET_ROW_ID__c</fullName>
        <description>SIEBEL_ASSET_ROW_ID</description>
        <externalDeveloperName>SIEBEL_ASSET_ROW_ID</externalDeveloperName>
        <label>SIEBEL_ASSET_ROW_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIEBEL_ASSET_STATUS__c</fullName>
        <description>SIEBEL_ASSET_STATUS</description>
        <externalDeveloperName>SIEBEL_ASSET_STATUS</externalDeveloperName>
        <label>SIEBEL_ASSET_STATUS</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <description>STATUS</description>
        <externalDeveloperName>STATUS</externalDeveloperName>
        <label>STATUS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <label>Temp</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Subscription item amount.</description>
        <externalDeveloperName>PENDING_AMOUNT</externalDeveloperName>
        <label>Total</label>
        <length>30</length>
        <type>Text</type>
    </fields>
</CustomObject>